Fix double scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,7 +67,6 @@ textarea {
 
 .iframe {
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .center h1 {
